[package]
name = "pudding-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
num = {version="0.4", default-features=false}
pudding-pac = { path = "../pac" } 

[build-dependencies]
cc = "1.0.36"

[features]
default = ["std"]
std=[]
pl390 = []

