[package]
name = "pudding-kernel"
version = "0.1.0"
edition = "2021"
authors = ["Ryuz <ryufuchi@gmail.com>"]
repository = "https://github.com/ryuz/pudding-rtos"
keywords = ["rtos", "zynq", "zynqmp", "cortex-r5"]
license = "MIT"

description = "RealTime-OS Kernel"


[dependencies]
pudding-pac = {version="0.1.0", default-features=false}
bitflags = "1.3.2"
num = {version="0.4", default-features=false}

[build-dependencies]
cc = "1.0.36"

[features]
default = ["std"]
std=[]
pl390 = []
