[package]
name = "math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
num = { version="0.4.0", default-features = false, features = ["libm"]}
vecmat = {version = "0.7.7", default-features = false}

#[dependencies.num-traits]
#version = "0.2"
#default-features = false
#features = ["libm"]    # <--- Uncomment if you wish to use `Float` and `Real` without `std`

#[dependencies.num]
#version = "0.4"
#default-features = false

#[dependencies.vecmat]
#version = "0.7.7"
#default-features = false
