[package]
name = "pudding-pac"
version = "0.1.1"
edition = "2021"
authors = ["Ryuz <ryufuchi@gmail.com>"]
repository = "https://github.com/ryuz/pudding-rtos"
keywords = ["pac", "zynq", "zynqmp", "cortex-r5"]
license = "MIT"

description = "Peripheral Access Crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"

