[package]
name = "zynqmp_rpu_hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pudding-pac    = { path = "../../pac"} 
pudding-kernel = { path = "../../kernel", default-features=false, features=["pl390"] } 

[build-dependencies]
cc = "1.0.36"
